--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         google fonts
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323">
-    <link rel="icon" href="res/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="res/favicon.png" type="image/icon">
     <audio id="aud">
         <source src="res/plus.wav" type="audio/wav">
         
