fix minor error

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <br>
     <h3><b>turtle pool</b></h3><br>
     <p>you want a pool of turtles. you have a pool, but you need turtles.</p>
-    <p>you can invite them over. you just need to press that empty pool</p>
+    <p>you can invite them over. you just need to press that empty pool down there</p>
     <p>every time you invite a turtle, you will earn a point</p><br>
     <img src="res/pool.png"  width="32" height="32" class="cell" onclick="something()"><br><br>
     <div class="b"><br>
