--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             font-family: "VT323";
             text-align: center;
             background-image: url("res/a.png");
-            color: #0e1728
+            color: #0e1728;
+            ;
         }
 
         .cell {
@@ -36,13 +37,17 @@
         .class {
             display: block;
         }
+
+        #title {
+            cursor: url("res/hovr.png"), auto;
+        }
     </style>
     <script src="script/main.js"></script>
     
 </head>
 <body>
     <br>
-    <h3><b>turtle pool</b></h3><br>
+    <h3 id="title"><b>turtle pool</b></h3><br>
     <p>you want a pool of turtles. you have a pool, but you need turtles.</p>
     <p>you can invite them over. you just need to press that empty pool down there</p>
     <p>every time you invite a turtle, you will earn a point</p><br>
