--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="nothing"><br><br>
         <p class="pointer" id="x1" onclick="x1()" onmouseover="hov('x1')" onmouseleave="nohov('x1')">5 points: buy turtle toy</p>
         <p class="pointer" id="x2" onclick="x2()" onmouseover="hov('x2')" onmouseleave="nohov('x2')">7 points: buy turtle food</p>
-
+        <p class="pointer" id="spin" onclick="spin()" onmouseover="hov('spin')" onmouseleave="nohov('spin')">spin a wheel (+100 or -100 points)</p>
     </div>
     <div>
 
