--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>you want a pool of turtles. you have a pool, but you need turtles.</p>
     <p>you can invite them over. you just need to press that empty pool down there</p>
     <p>every time you invite a turtle, you will earn a point</p><br>
-    <img src="res/pool.png"  width="32" height="32" class="cell" onclick="something()"><br><br>
+    <img src="res/pool.png"  width="32" height="32" class="cell" onclick="something()" id="pool"><br><br>
     <div class="b"><br>
         <br>
         <p id="b">points: 0</p>
